fix: re-worked margins and z-indexes to remove artifact and prevent wave-text overlap

--- a/client/pages/product.module.css
+++ b/client/pages/product.module.css
@@ -35,6 +35,7 @@
   font-size: 50px;
   padding-top: 30px;
   margin: 0;
+  z-index: 3;
 }
 
 .l {
@@ -44,11 +45,13 @@
   margin: 0;
   border-bottom: 2px solid black;
   padding-bottom: 10px;
+  z-index: 3;
 }
 
 .m {
   margin-top: 30px;
   font-size: 20px;
+  z-index: 3;
 }
 
 .try {
@@ -187,6 +190,9 @@
 
 /** For tablet devices **/
 @media (min-width: 768px) and (max-width: 1023px) {
+  .page {
+    height: 67.2vh;
+  }
   .wave svg {
     height: 110px;
     width: calc(100% + 1.3px);
@@ -198,6 +204,9 @@
 
 /** For mobile devices **/
 @media (max-width: 767px) {
+  .page {
+    height: 67.3vh;
+  }
   .wave svg {
     height: 66px;
     width: calc(100% + 1.3px);
